base/syncflaer/networkpolicies/syncflaer.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: syncflaer
  namespace: syncflaer
spec:
  endpointSelector:
    matchLabels:
      job: syncflaer
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/instance: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toFQDNs:
        - matchName: api.cloudflare.com
        - matchName: hooks.slack.com
        - matchName: ifconfig.me
        - matchName: ipecho.net
        - matchName: myip.is
        - matchName: checkip.amazonaws.com
        - matchName: api.ipify.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
